<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/vpadding48dp">

    <LinearLayout
        android:id="@+id/menu_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/color_fafafa"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/vheight85.5dp"
            android:layout_marginBottom="@dimen/vmargin0.5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/pop_night_mode"
                style="@style/pop_item_style"
                android:drawableTop="@mipmap/moon_black"
                android:text="@string/str_night_mode" />

            <TextView
                android:id="@+id/pop_no_pic"
                style="@style/pop_item_style"
                android:drawableTop="@mipmap/no_pic_black"
                android:text="@string/str_text_only"/>

            <TextView
                android:id="@+id/pop_fullscreen"
                style="@style/pop_item_style"
                android:drawableTop="@mipmap/fullscreen_black"
                android:text="@string/str_full_screen" />

            <TextView
                android:id="@+id/pop_inco_mode"
                style="@style/pop_item_style"
                android:drawableTop="@mipmap/inco_black"
                android:text="@string/str_incognito" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/vheight85.5dp"
            android:layout_marginBottom="@dimen/vmargin0.5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pop_add_slide_bookmark"
                style="@style/pop_item_style"
                android:drawableTop="@mipmap/add_bookmark_black"
                android:text="@string/str_add_bookmark" />

            <TextView
                android:id="@+id/pop_bookmarklist"
                style="@style/pop_item_style"
                android:drawableTop="@mipmap/bookmark_black"
                android:text="@string/str_bookmark" />

            <TextView
                android:id="@+id/pop_refresh"
                style="@style/pop_item_style"
                android:drawableTop="@mipmap/refresh_black"
                android:text="@string/str_refresh" />

            <TextView
                android:id="@+id/pop_dowload_manager"
                style="@style/pop_item_style"
                android:drawableTop="@mipmap/download_black"
                android:text="@string/str_download_manage" />
        </LinearLayout>
        <!-- up 2 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/vheight85.5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pop_share"
                style="@style/pop_item_style"
                android:drawableTop="@mipmap/share_black"
                android:text="@string/str_share" />
            <TextView
                android:id="@+id/pop_screenshot"
                style="@style/pop_item_style"
                android:drawableTop="@mipmap/screenshot_black"
                android:text="@string/str_screenshot" />
            <TextView
                android:id="@+id/pop_light_always_setting"
                style="@style/pop_item_style"
                android:drawableTop="@mipmap/bright_black"
                android:text="@string/str_bright" />
            <FrameLayout
                android:id="@+id/fl_update"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tv_update"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:paddingBottom="@dimen/vpadding10dp"
                    android:paddingTop="@dimen/vpadding15dp"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_12"
                    android:textColor="@color/color_444444"
                    android:drawablePadding="@dimen/padding2dp"
                    android:drawableTop="@mipmap/update_black"
                    android:text="@string/str_update" />
                <ImageView
                    android:id="@+id/iv_update_notice"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/vmargin10dp"
                    android:layout_marginLeft="@dimen/hmargin15dp"
                    android:layout_marginStart="@dimen/hmargin15dp"
                    android:visibility="gone"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>